# elastic-load-sqllogs

./: Cargo.toml  elastic-create-indices.sh  elastic-list-indices.sh  elastic-query-sqllogs.sh  elastic-sqllogs-agg-time.sh  elastic-sqllogs-agg.sh  elastic-sqllogs-create.sh  elastic-sqllogs-desc.sh  elastic-sqllogs-drop.sh  elastic-sqllogs-qry.sh  setenv-131.72.elastic  sql_logs.tsv  test.sh
src/: .main.rs.swp  main.rs
