[package]
name = "elastic-load-sqllogs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"  # If you need JSON support
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
